minor changes + a few tests